# NASA_Satellite_Tracker

./: CMakeLists.txt  README.md  anomaly_detection.c  data_storage.c  message_publisher.c  mongo_app.c  publisher.c  satellite_viewer.c
assets/: data_analysis.py
include/: analyzer_core.c  analyzer_core.h  custom.c  custom.h  db_connector.c  db_connector.h  message_publisher.h  satellite_viewer.h
lib/: adwaita-1.lib  cairo-gobject.lib  cairo.lib  cairomm-vc143-1.16.lib  cjson.lib  freetype.lib  fribidi.lib  gdk-3.lib  gdk_pixbuf-2.0.lib  gettextpo.lib  giomm-vc143-2.68.lib  girepository-1.0.lib  girepository-2.0.lib  glib-2.0.lib  glibmm-vc143-2.68.lib  glibmm_generate_extra_defs-vc143-2.68.lib  gmodule-2.0.lib  graphene-1.0.lib  gtk-3.lib  gtk-4.lib  gtksourceview-5.lib  harfbuzz-cairo.lib  harfbuzz-gobject.lib  jpeg-static.lib  libpng16_static.lib  libxml2.lib  pango-1.0.lib  pangomm-vc143-2.48.lib  pangowin32-1.0.lib  pcre2-16.lib  pcre2-posix.lib  rsvg-2.0.lib  sigc-3.0.lib  tiffxx.lib  zlib1.lib
lib/curl/: libcurl_a.lib
lib/gtk/include/: pcre2.h
lib/gtk/include/cairo/: cairo-features.h
lib/gtk/include/fribidi/: fribidi-config.h
lib/gtk/include/harfbuzz/: hb-features.h
lib/gtk/include/pkgconf/libpkgconf/: libpkgconf.h
lib/gtk/lib/: asprintf.lib  atk-1.0.lib  cairo-script-interpreter.lib  epoxy.lib  ffi.lib  gailutil-3.lib  gio-2.0.lib  gobject-2.0.lib  gthread-2.0.lib  harfbuzz-subset.lib  harfbuzz.lib  iconv.lib  intl.lib  pangocairo-1.0.lib  pcre2-32.lib  pcre2-8.lib  pixman-1.lib  pkgconf.lib  turbojpeg.lib
lib/gtk/lib/cmake/libjpeg-turbo/: libjpeg-turboTargets-relwithdebinfo.cmake
lib/gtk/lib/cmake/tiff/: TiffTargets-relwithdebinfo.cmake
lib/gtk/lib/gdk-pixbuf-2.0/2.10.0/: loaders.cache
lib/gtk/lib/glib-2.0/include/: glibconfig.h
lib/gtk/lib/libpng/: libpng16-relwithdebinfo.cmake
lib/gtk/lib/pkgconfig/: atk.pc  cairo-dwrite-font.pc  cairo-ft.pc  cairo-gobject.pc  cairo-pdf.pc  cairo-png.pc  cairo-ps.pc  cairo-script-interpreter.pc  cairo-script.pc  cairo-svg.pc  cairo-tee.pc  cairo-win32-font.pc  cairo-win32.pc  cairo.pc  epoxy.pc  freetype2.pc  fribidi.pc  gail-3.0.pc  gdk-3.0.pc  gdk-pixbuf-2.0.pc  gio-2.0.pc  gio-windows-2.0.pc  girepository-2.0.pc  glib-2.0.pc  gmodule-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gthread-2.0.pc  gtk+-win32-3.0.pc  harfbuzz-cairo.pc  harfbuzz-gobject.pc  harfbuzz-subset.pc  harfbuzz.pc  libffi.pc  libjpeg.pc  libpcre2-16.pc  libpcre2-32.pc  libpcre2-8.pc  libpkgconf.pc  libpng.pc  (+7 more)
lib/gtk/share/thumbnailers/: gdk-pixbuf-thumbnailer.thumbnailer
lib/mongo-c-driver-master/: VERSION_CURRENT
lib/mongo-c-driver-master/src/libmongoc/src/mongoc/: mongoc-bulkwrite.h
